# sentinel_garden

./: .gitignore  README.md  __init__.py  client.py  config.yaml  generate_sessions.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_registry.py  train.py
data/: sessions.json
episode_logging/: __init__.py  episode_logger.py
prompts/: guardrail_enforcer.txt  jailbreak_detector.txt  prompt_compiler.txt
scoring/: __init__.py  engine.py  judge_client.py  prompts.py  rewards.py
server/: Dockerfile  __init__.py  app.py  sentinel_garden_environment.py
session_store/: __init__.py  base.py  json_store.py
