# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sentinel_garden"
version = "0.2.0"
description = "Sentinel Garden environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (FastAPI server + HTTP/WebSocket client)
    "openenv-core[core]>=0.2.2",
    # ASGI server — required by app.py at import time
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# sentence-transformers and torch are no longer required by the default
# reward function (note_reward has been removed). Install this group only
# if you are running a custom grader that scores free-text outputs.
nlp = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "sentinel_garden.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["sentinel_garden", "sentinel_garden.server"]
package-dir = { "sentinel_garden" = ".", "sentinel_garden.server" = "server" }
